Got inspectables in xcode

--- a/RadialMenu/Base.lproj/Main.storyboard
+++ b/RadialMenu/Base.lproj/Main.storyboard
@@ -29,8 +29,13 @@
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w3Q-4m-zQU" customClass="RadialMenu" customModule="RadialMenu" customModuleProvider="target">
-                                <rect key="frame" x="171" y="37" width="138" height="164"/>
+                                <rect key="frame" x="171" y="33" width="138" height="164"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="radius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
