--- a/RadialMenu/Base.lproj/Main.storyboard
+++ b/RadialMenu/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
                                 <items/>
                             </toolbar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" translatesAutoresizingMaskIntoConstraints="NO" id="pL3-BC-0tS">
+                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" translatesAutoresizingMaskIntoConstraints="NO" id="pL3-BC-0tS">
                                 <rect key="frame" x="211" y="224" width="59" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="59" id="11O-HE-miL"/>
@@ -30,7 +30,6 @@
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w3Q-4m-zQU" customClass="RadialMenu" customModule="RadialMenu" customModuleProvider="target">
                                 <rect key="frame" x="171" y="33" width="138" height="164"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="radius">
                                         <integer key="value" value="10"/>
